// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TaskBar /> Snapshots <Clock /> should match snapshot 1`] = `
.c0 {
  background-color: transparent;
  width: auto;
  height: auto;
  box-shadow: inset 0px 0px 0px 0px, inset 1px 1px 0px 0px #868a8e, 0.5px 0.5px 0px 0.5px #ffffff;
  padding-right: 6px;
  padding-left: 6px;
  padding-top: 2px;
  padding-bottom: 2px;
}

.c1 {
  display: inline-block;
  position: relative;
  cursor: default;
  white-space: nowrap;
}

.c2 div:first-child {
  right: 0;
}

<div>
  <div
    class="c0"
    height="auto"
    style="display: flex; justify-content: center; align-items: center;"
    width="auto"
  >
    <div
      class="c1 c2"
    >
      
    </div>
  </div>
</div>
`;

exports[`<TaskBar /> Snapshots <WindowButton /> should match snapshot 1`] = `
.c0 {
  background-color: #c3c7cb;
  width: auto;
  height: auto;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
  border: none;
  outline: none;
  width: 100%;
}

.c2 img {
  margin-right: 4px;
  min-width: 20px;
  width: 20px;
  height: 20px;
}

<div>
  <button
    class="c0 c1"
    height="auto"
    width="auto"
  >
    <div
      class="c2"
    >
      <img
        height="32"
        src="test-file-stub"
        width="32"
      />
    </div>
    
  </button>
</div>
`;

exports[`<TaskBar /> Snapshots <WindowButton /> should match snapshot with active prop 1`] = `
.c0 {
  background-color: #c3c7cb;
  width: auto;
  height: auto;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
}

.c3 {
  background-color: #c3c7cb;
  width: auto;
  height: auto;
  box-shadow: inset 0px 0px 0px 0px, inset 1px 1px 0px 0px #868a8e, 0.5px 0.5px 0px 0.5px #ffffff;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
  border: none;
  outline: none;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
  border: none;
  outline: none;
  outline: 1px dotted #000000;
  outline-offset: -4px;
  padding-top: 4px;
  padding-right: 2px;
  padding-bottom: 0;
  padding-left: 4px;
}

.c2 img {
  margin-right: 4px;
  min-width: 20px;
  width: 20px;
  height: 20px;
}

<div>
  <button
    class="c0 c1"
    height="auto"
    width="auto"
  >
    <div
      class="c2"
    >
      <img
        height="32"
        src="test-file-stub"
        width="32"
      />
    </div>
    
  </button>
  <button
    class="c3 c4"
    height="auto"
    width="auto"
  >
    <div
      class="c2"
    >
      <img
        height="32"
        src="test-file-stub"
        width="32"
      />
    </div>
    
  </button>
</div>
`;

exports[`<TaskBar /> Snapshots <WindowButton /> should match snapshot with icon prop 1`] = `
.c0 {
  background-color: #c3c7cb;
  width: auto;
  height: auto;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
  border: none;
  outline: none;
  width: 100%;
}

.c2 img {
  margin-right: 4px;
  min-width: 20px;
  width: 20px;
  height: 20px;
}

<div>
  <button
    class="c0 c1"
    height="auto"
    width="auto"
  >
    <div
      class="c2"
    >
      <img
        height="32"
        src="test-file-stub"
        width="32"
      />
    </div>
    
  </button>
</div>
`;

exports[`<TaskBar /> Snapshots <WindowButton /> should match snapshot with small prop 1`] = `
.c0 {
  background-color: #c3c7cb;
  width: auto;
  height: auto;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
  border: none;
  outline: none;
}

.c2 img {
  margin-right: 4px;
  min-width: 20px;
  width: 20px;
  height: 20px;
}

<div>
  <button
    class="c0 c1"
    height="auto"
    width="auto"
  >
    <div
      class="c2"
    >
      <img
        height="32"
        src="test-file-stub"
        width="32"
      />
    </div>
    
  </button>
</div>
`;

exports[`<TaskBar /> Snapshots should match snapshot 1`] = `
.c0 {
  background-color: #c3c7cb;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 28px;
  width: 100%;
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 2;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  padding: 2px;
}

.c1 {
  background-color: #c3c7cb;
  width: auto;
  height: auto;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
}

.c4 {
  background-color: #c3c7cb;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: auto;
  box-shadow: none;
  padding-left: 0;
  margin-left: 2px;
}

.c5 {
  background-color: transparent;
  width: auto;
  height: auto;
  box-shadow: inset 0px 0px 0px 0px, inset 1px 1px 0px 0px #868a8e, 0.5px 0.5px 0px 0.5px #ffffff;
  padding-right: 6px;
  padding-left: 6px;
  padding-top: 2px;
  padding-bottom: 2px;
}

.c6 {
  display: inline-block;
  position: relative;
  cursor: default;
  white-space: nowrap;
}

.c7 div:first-child {
  right: 0;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
  border: none;
  outline: none;
}

.c3 img {
  margin-right: 4px;
  min-width: 20px;
  width: 20px;
  height: 20px;
}

<div>
  <div
    class="c0"
    display="flex"
    height="28"
    width="100%"
  >
    <button
      class="c1 c2"
      height="auto"
      width="auto"
    >
      <div
        class="c3"
      >
        <img
          height="32"
          src="test-file-stub"
          width="32"
        />
      </div>
      Start
    </button>
    <div
      class="c4"
      display="flex"
      height="auto"
      width="100%"
    />
    <div
      class="c5"
      height="auto"
      style="display: flex; justify-content: center; align-items: center;"
      width="auto"
    >
      <div
        class="c6 c7"
      >
        
      </div>
    </div>
  </div>
</div>
`;

exports[`<TaskBar /> Snapshots should match snapshot with list prop 1`] = `
.c0 {
  background-color: #c3c7cb;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 28px;
  width: 100%;
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 2;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  padding: 2px;
}

.c1 {
  background-color: #c3c7cb;
  width: auto;
  height: auto;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
}

.c4 {
  background-color: #c3c7cb;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: auto;
  box-shadow: none;
  padding-left: 0;
  margin-left: 2px;
}

.c5 {
  background-color: transparent;
  width: auto;
  height: auto;
  box-shadow: inset 0px 0px 0px 0px, inset 1px 1px 0px 0px #868a8e, 0.5px 0.5px 0px 0.5px #ffffff;
  padding-right: 6px;
  padding-left: 6px;
  padding-top: 2px;
  padding-bottom: 2px;
}

.c6 {
  display: inline-block;
  position: relative;
  cursor: default;
  white-space: nowrap;
}

.c7 div:first-child {
  right: 0;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
  border: none;
  outline: none;
}

.c3 img {
  margin-right: 4px;
  min-width: 20px;
  width: 20px;
  height: 20px;
}

<div>
  <div
    class="c0"
    display="flex"
    height="28"
    width="100%"
  >
    <button
      class="c1 c2"
      height="auto"
      width="auto"
    >
      <div
        class="c3"
      >
        <img
          height="32"
          src="test-file-stub"
          width="32"
        />
      </div>
      Start
    </button>
    <div
      class="c4"
      display="flex"
      height="auto"
      width="100%"
    />
    <div
      class="c5"
      height="auto"
      style="display: flex; justify-content: center; align-items: center;"
      width="auto"
    >
      <div
        class="c6 c7"
      >
        
      </div>
    </div>
  </div>
</div>
`;

exports[`<TaskBar /> Snapshots should match snapshot with list prop 2`] = `
<div>
  <div
    class="sc-cHjxUU dhrIYR"
    display="flex"
    height="28"
    width="100%"
  >
    .c2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
  padding: 2px 6px;
  color: #000000;
}

.c2 img {
  margin-right: 10px;
}

.c2:hover {
  background: #000e7a;
  color: #ffffff;
}

.c2 ul {
  display: none;
  position: absolute;
  top: -2px;
  left: 97%;
  color: #000000;
  z-index: 2;
}

.c2 ul img {
  width: 18px;
  height: 20px;
  margin-right: 6px;
}

.c2 svg {
  fill: #ffffff;
}

.c1 {
  background-color: #c3c7cb;
  padding: 5px 20px 6px;
  border: none;
  margin: 0;
  padding: 2px;
  list-style: none;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset 0 0 0 1px #868a8e, 1px 1px 0 1px #000000;
  width: 200px;
}

.c0 {
  background-color: #c3c7cb;
  width: auto;
  height: auto;
  position: absolute;
  bottom: 28px;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
}

<div
      class="c0"
      height="auto"
      width="auto"
    >
      <ul
        class="c1"
        width="200"
      >
        <li
          class="c2"
        >
          <img
            height="32"
            src="test-file-stub"
            width="32"
          />
          Local Disk (C:)
        </li>
        <li
          class="c2"
        >
          <img
            height="32"
            src="test-file-stub"
            width="32"
          />
          Windows Explorer
        </li>
      </ul>
    </div>
    <button
      class="sc-cHjxUU sc-jifIRw kpUmSe bIBXZe"
      height="auto"
      width="auto"
    >
      <div
        class="sc-hkwnrn jKLAct"
      >
        <img
          height="32"
          src="test-file-stub"
          width="32"
        />
      </div>
      Start
    </button>
    <div
      class="sc-cHjxUU glUIUz"
      display="flex"
      height="auto"
      width="100%"
    />
    <div
      class="sc-cHjxUU djyLKl"
      height="auto"
      style="display: flex; justify-content: center; align-items: center;"
      width="auto"
    >
      <div
        class="sc-gHftXq eqxqLC sc-dkAroR dLoNwV"
      >
        
      </div>
    </div>
  </div>
</div>
`;

exports[`<TaskBar /> Snapshots should match snapshot with one Modal 1`] = `
.c5 {
  background-color: #c3c7cb;
  padding: 7px 20px 5px;
  border: none;
  color: #000000;
  font-size: 12px;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset 0 0 0 1px #868a8e, 1px 1px 0 0px #000000;
}

.c5:disabled {
  color: #868a8e;
}

.c5:focus {
  outline: 1px dotted #000000;
  outline-offset: -5px;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset -0.5px -0.5px 0px 1px #868a8e, 1px 1px 0 1px #000000;
}

.c5:active {
  padding: 8px 20px 4px;
  outline: 1px dotted #000000;
  outline-offset: -5px;
  box-shadow: inset 0 0 0 1px #868a8e, 0 0 0 1px #000000;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: fixed;
  padding: 2px 2px 8px;
  top: 50px;
  background-color: #c3c7cb;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset 0 0 0 1px #868a8e, 1px 1px 0 1px #000000;
  width: auto;
  height: auto;
  z-index: 1;
}

.c1 {
  height: 18px;
  margin-bottom: 2px;
  color: #ffffff;
  padding: 2px 2px 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: #000e7a;
}

.c1 img {
  width: 15px;
  height: 13px;
  margin-right: 4px;
}

.c2 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: bold;
  color: #fefefe;
}

.c3 {
  list-style: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 2px;
}

.c4:last-child {
  margin-right: 0;
}

.c6 {
  padding: 0;
  width: 17px;
  height: 14px;
  min-width: 0;
  font-size: 10px;
}

.c6:active {
  padding: 1px 0 0 1px;
  outline: none;
}

.c6:focus {
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset -1px -1px 0px 1px #868a8e;
}

.c7 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 6px;
}

.c8 {
  background-color: #c3c7cb;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 28px;
  width: 100%;
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 2;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  padding: 2px;
}

.c9 {
  background-color: #c3c7cb;
  width: auto;
  height: auto;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
}

.c12 {
  background-color: #c3c7cb;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: auto;
  box-shadow: none;
  padding-left: 0;
  margin-left: 2px;
}

.c16 {
  background-color: transparent;
  width: auto;
  height: auto;
  box-shadow: inset 0px 0px 0px 0px, inset 1px 1px 0px 0px #868a8e, 0.5px 0.5px 0px 0.5px #ffffff;
  padding-right: 6px;
  padding-left: 6px;
  padding-top: 2px;
  padding-bottom: 2px;
}

.c13 {
  background-color: #e6e6e6;
  width: auto;
  height: auto;
  box-shadow: inset 0px 0px 0px 0px, inset 1px 1px 0px 0px #868a8e, 0.5px 0.5px 0px 0.5px #ffffff;
}

.c17 {
  display: inline-block;
  position: relative;
  cursor: default;
  white-space: nowrap;
}

.c18 div:first-child {
  right: 0;
}

.c10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
  border: none;
  outline: none;
}

.c14 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
  border: none;
  outline: none;
  width: 100%;
}

.c11 img {
  margin-right: 4px;
  min-width: 20px;
  width: 20px;
  height: 20px;
}

.c15 {
  overflow: hidden;
  display: -webkit-box;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
  text-align: left;
}

<div>
  <div
    class="c0 react-draggable"
    style="transform: translate(0px,0px);"
  >
    <div
      class="c1"
    >
      <img
        height="32"
        src="test-file-stub"
        width="32"
      />
      <div
        class="c2 draggable"
      >
        file.bat
      </div>
      <ul
        class="c3"
      >
        <li
          class="c4"
        >
          <button
            class="c5 c6"
          >
            ?
          </button>
        </li>
        <li
          class="c4"
        >
          <button
            class="c5 c6"
          >
            x
          </button>
        </li>
      </ul>
    </div>
    <div
      class="c7"
    />
  </div>
  <div
    class="c8"
    display="flex"
    height="28"
    width="100%"
  >
    <button
      class="c9 c10"
      height="auto"
      width="auto"
    >
      <div
        class="c11"
      >
        <img
          height="32"
          src="test-file-stub"
          width="32"
        />
      </div>
      Start
    </button>
    <div
      class="c12"
      display="flex"
      height="auto"
      width="100%"
    >
      <button
        class="c13 c14"
        height="auto"
        width="auto"
      >
        <div
          class="c11"
        >
          <img
            height="32"
            src="test-file-stub"
            width="32"
          />
        </div>
        <span
          class="c15"
        >
          file.bat
        </span>
      </button>
    </div>
    <div
      class="c16"
      height="auto"
      style="display: flex; justify-content: center; align-items: center;"
      width="auto"
    >
      <div
        class="c17 c18"
      >
        
      </div>
    </div>
  </div>
</div>
`;

exports[`<TaskBar /> Snapshots should match snapshot with two Modals 1`] = `
.c5 {
  background-color: #c3c7cb;
  padding: 7px 20px 5px;
  border: none;
  color: #000000;
  font-size: 12px;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset 0 0 0 1px #868a8e, 1px 1px 0 0px #000000;
}

.c5:disabled {
  color: #868a8e;
}

.c5:focus {
  outline: 1px dotted #000000;
  outline-offset: -5px;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset -0.5px -0.5px 0px 1px #868a8e, 1px 1px 0 1px #000000;
}

.c5:active {
  padding: 8px 20px 4px;
  outline: 1px dotted #000000;
  outline-offset: -5px;
  box-shadow: inset 0 0 0 1px #868a8e, 0 0 0 1px #000000;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: fixed;
  padding: 2px 2px 8px;
  top: 50px;
  background-color: #c3c7cb;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset 0 0 0 1px #868a8e, 1px 1px 0 1px #000000;
  width: auto;
  height: auto;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: fixed;
  padding: 2px 2px 8px;
  top: 50px;
  background-color: #c3c7cb;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset 0 0 0 1px #868a8e, 1px 1px 0 1px #000000;
  width: auto;
  height: auto;
  z-index: 1;
}

.c1 {
  height: 18px;
  margin-bottom: 2px;
  color: #ffffff;
  padding: 2px 2px 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: #7f787f;
}

.c1 img {
  width: 15px;
  height: 13px;
  margin-right: 4px;
}

.c9 {
  height: 18px;
  margin-bottom: 2px;
  color: #ffffff;
  padding: 2px 2px 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: #000e7a;
}

.c9 img {
  width: 15px;
  height: 13px;
  margin-right: 4px;
}

.c2 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: bold;
  color: #fefefe;
}

.c3 {
  list-style: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 2px;
}

.c4:last-child {
  margin-right: 0;
}

.c6 {
  padding: 0;
  width: 17px;
  height: 14px;
  min-width: 0;
  font-size: 10px;
}

.c6:active {
  padding: 1px 0 0 1px;
  outline: none;
}

.c6:focus {
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset -1px -1px 0px 1px #868a8e;
}

.c7 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 6px;
}

.c10 {
  background-color: #c3c7cb;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 28px;
  width: 100%;
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 2;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  padding: 2px;
}

.c11 {
  background-color: #c3c7cb;
  width: auto;
  height: auto;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
}

.c14 {
  background-color: #c3c7cb;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: auto;
  box-shadow: none;
  padding-left: 0;
  margin-left: 2px;
}

.c18 {
  background-color: transparent;
  width: auto;
  height: auto;
  box-shadow: inset 0px 0px 0px 0px, inset 1px 1px 0px 0px #868a8e, 0.5px 0.5px 0px 0.5px #ffffff;
  padding-right: 6px;
  padding-left: 6px;
  padding-top: 2px;
  padding-bottom: 2px;
}

.c17 {
  background-color: #e6e6e6;
  width: auto;
  height: auto;
  box-shadow: inset 0px 0px 0px 0px, inset 1px 1px 0px 0px #868a8e, 0.5px 0.5px 0px 0.5px #ffffff;
}

.c19 {
  display: inline-block;
  position: relative;
  cursor: default;
  white-space: nowrap;
}

.c20 div:first-child {
  right: 0;
}

.c12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
  border: none;
  outline: none;
}

.c15 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
  border: none;
  outline: none;
  width: 100%;
}

.c13 img {
  margin-right: 4px;
  min-width: 20px;
  width: 20px;
  height: 20px;
}

.c16 {
  overflow: hidden;
  display: -webkit-box;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
  text-align: left;
}

<div>
  <div
    class="c0 react-draggable"
    style="transform: translate(0px,0px);"
  >
    <div
      class="c1"
    >
      <img
        height="32"
        src="test-file-stub"
        width="32"
      />
      <div
        class="c2 draggable"
      >
        Windows Explorer
      </div>
      <ul
        class="c3"
      >
        <li
          class="c4"
        >
          <button
            class="c5 c6"
          >
            ?
          </button>
        </li>
        <li
          class="c4"
        >
          <button
            class="c5 c6"
          >
            x
          </button>
        </li>
      </ul>
    </div>
    <div
      class="c7"
    />
  </div>
  <div
    class="c8 react-draggable"
    style="transform: translate(0px,0px);"
  >
    <div
      class="c9"
    >
      <img
        height="32"
        src="test-file-stub"
        width="32"
      />
      <div
        class="c2 draggable"
      >
        file.bat
      </div>
      <ul
        class="c3"
      >
        <li
          class="c4"
        >
          <button
            class="c5 c6"
          >
            ?
          </button>
        </li>
        <li
          class="c4"
        >
          <button
            class="c5 c6"
          >
            x
          </button>
        </li>
      </ul>
    </div>
    <div
      class="c7"
    />
  </div>
  <div
    class="c10"
    display="flex"
    height="28"
    width="100%"
  >
    <button
      class="c11 c12"
      height="auto"
      width="auto"
    >
      <div
        class="c13"
      >
        <img
          height="32"
          src="test-file-stub"
          width="32"
        />
      </div>
      Start
    </button>
    <div
      class="c14"
      display="flex"
      height="auto"
      width="100%"
    >
      <button
        class="c11 c15"
        height="auto"
        width="auto"
      >
        <div
          class="c13"
        >
          <img
            height="32"
            src="test-file-stub"
            width="32"
          />
        </div>
        <span
          class="c16"
        >
          Windows Explorer
        </span>
      </button>
      <button
        class="c17 c15"
        height="auto"
        width="auto"
      >
        <div
          class="c13"
        >
          <img
            height="32"
            src="test-file-stub"
            width="32"
          />
        </div>
        <span
          class="c16"
        >
          file.bat
        </span>
      </button>
    </div>
    <div
      class="c18"
      height="auto"
      style="display: flex; justify-content: center; align-items: center;"
      width="auto"
    >
      <div
        class="c19 c20"
      >
        
      </div>
    </div>
  </div>
</div>
`;
